      and run tests during package build.
    - Create disk/by-partlabel links for mmcblk partitions.
    - Hack to support system-image read-only /etc, and modify files in
      /etc/writable/ instead.
    - debian/rules: Drop doc dir symlinking. It creates havoc with dpkg
      upgrades, and we already have the automatic per-file symlinking.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Sat, 26 Apr 2014 17:29:00 +0200

systemd (208-7) unstable; urgency=medium

  [ Michael Biebl ]
  * Mask remaining services provided by the initscripts package and document
    in more detail why certain services have been masked. (Closes: #659264)
  * Install zsh completions to the correct place. (Closes: #717540)

  [ Jon Severinsson ]
  * Cherry-pick upstream fix for journal file permissions.
  * Map some rcS.d init script dependencies to their systemd equivalent.
  * Update Depends on initscripts to the version with a systemd-compatible
    mountnfs ifup hook. (Closes: #746358)
  * Add Breaks on lvm2 versions without native systemd support.
    (Closes: #678438, #692120)
  * Do not fail udev upgrades if the udev service is already runtime-masked
    when the preinst script is run. (Closes: #755746)
  * Add Pre-Depends on systemd to systemd-sysv, to avoid risking that the
    sysv-compatible symlinks become dangling on a partial install.
  * Ensure that systemctl is usable right after being unpacked, by adding the
    required Pre-Depends to systemd and libsystemd-daemon0. (Closes: #753589)
  * Add support for TuxOnIce hibernation. (Closes: #746463)

  [ Martin Pitt ]
  * Rename "api" autopkgtest to "build-login", and stop requiring that
    sd_login_monitor_new() succeeds. It doesn't in many environments like
    schroot or after upgrades from < 204, and the main point of the test is
    to check that libsystemd-login-dev has correct contents and dependencies.
    Drop "isolation-machine" requirement.
  * Use glibc's xattr support instead of requiring libattr. Fixes FTBFS with